# ontu-schedule-bot

./: .dockerignore  .gitignore  .tmp  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  example.env  pyproject.toml  requirements.txt  run_lint.bat  run_lint.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature-request.md  name-the-bug.md
.github/workflows/: pylint.yml  release-docker.yml
ontu_schedule_bot/: bot.py  commands.py  decorators.py  enums.py  patterns.py  secret_config.py  test.py  utils.py
ontu_schedule_bot/classes/: __init__.py  base.py  chat.py  day.py  department.py  faculty.py  group.py  lesson.py  message_campaign.py  pair.py  schedule.py  subscription.py  teacher.py
src/: bot.py  example.env
src/ontu_schedule_bot/: bot.py  commands.py  decorators.py  enums.py  errors.py  messages.py  patterns.py  schemas.py  secret_config.py  settings.py  utils.py
src/ontu_schedule_bot/classes/: __init__.py  base.py  chat.py  day.py  department.py  faculty.py  group.py  lesson.py  message_campaign.py  pair.py  schedule.py  subscription.py  teacher.py
