[project]
name = "ontu-schedule-bot"
version = "1.0.3"
description = "ONTU Schedule Telegram Bot"
authors = [
    {name = "Pavlo Pohorieltsev", email = "49622129+makisukurisu@users.noreply.github.com"},
]
dependencies = [
    "python-telegram-bot[callback-data,rate-limiter,job-queue]>=22.5,<23.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic-settings>=2.11.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
]
[tool.pdm]
distribution = false
